<resources>
    <string name="app_name">Lab 04 task</string>
    <string name="add_item">Add Item</string>
    <string name="eggs">Eggs</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="milk">Milk</string>
    <string name="wheat_flour">Wheat Flour</string>
    <string name="apple">Apple</string>
    <string name="sugar">Sugar</string>
    <string name="salt">Salt</string>
    <string name="oil">Oil</string>
    <string name="chocolate">Chocolate</string>
    <string name="space" />
</resources>